--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header {
 nav {
   width: 100%;
   height: 30px;
-  background-color: black;
+  background-color: silver;
   font-size: 20px;
 }
 ul {
@@ -60,16 +60,14 @@ h1 {
   padding-bottom: 40px;
   font-size: 20px;
 }
-.license3 {
-  border-bottom: solid 10px lightyellow;
-}
+
 .product {
   text-align: center;
   padding-bottom: 40px;
   font-size: 20px;
 }
-.product1 {
-  border-bottom: solid 10px lightyellow;
+.explanation {
+  border-bottom: solid 10px royalblue;
 }
 .sozai {
   text-align: right;
