--- a/style.css
+++ b/style.css
@@ -32,38 +32,41 @@ h1 {
 }
 .name {
   padding-bottom: 40px;
-  font-size: 20px;
+  font-size: 25px;
 }
 .birthday {
   padding-bottom: 40px;
-  font-size: 20px;
+  font-size: 25px;
 }
 .university {
   padding-bottom: 40px;
-  font-size: 20px;
+  font-size: 25px;
 }
 .major {
   padding-bottom: 40px;
-  font-size: 20px;
+  font-size: 25px;
 }
 .grade {
   padding-bottom: 40px;
-  font-size: 20px;
+  font-size: 25px;
 }
 .hobby {
   padding-bottom: 40px;
-  font-size: 20px;
+  font-size: 25px;
 }
 .license {
   text-align: center;
   padding-bottom: 40px;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .product {
   text-align: center;
   padding-bottom: 40px;
-  font-size: 20px;
+  font-size: 25px;
+}
+.img {
+  padding-top: 20px
 }
 .explanation {
   border-bottom: solid 10px royalblue;
