--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ h1 {
   text-align: center;
   border-bottom: solid 10px mediumseagreen;
 }
+img {
+  padding-top: 20px
+}
+
 .profile {
   text-align: center;
 }
@@ -65,11 +69,9 @@ h1 {
   padding-bottom: 40px;
   font-size: 25px;
 }
-.img {
-  padding-top: 20px
-}
+
 .explanation {
-  padding-top: 10px;
+  padding-top: 30px;
   border-bottom: solid 10px royalblue;
   font-size: 20px;
 }
