--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ img {
   font-size: 25px;
 }
 .license3{
-  border-bottom: solid 10px royalblue;
+  border-bottom: solid 10px mediumseagreen;
 }
 
 .product {
