--- a/style.css
+++ b/style.css
@@ -27,8 +27,12 @@ h1 {
   text-align: center;
   border-bottom: solid 10px mediumseagreen;
 }
+.gazou{
+  text-align: center;
+}
 img {
-  padding-top: 20px
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .profile {
