--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ h1 {
   font-size: 28px;
 }
 
+.zuban{
+  font-size: 15px;
+}
+
 .explanation {
   padding-top: 30px;
   border-bottom: solid 10px royalblue;
